# my-telegram-bot2

./: main.py  pyproject.toml  translator.py
bot/: 6589571852.json  8529945089.json  config.py  helpers.py  main.py  storage.py
bot /: requirements.txt
bot/data/: -1003816506171.json  8914452781.json
bot/data /: -1003816506171.json  6589571852.json  8529945089.json
bot/handlers/: admin.py  ai_chat.py  anime.py  duel.py  economy.py  filter_handler.py  fun.py  games.py  help.py  lock.py  mafia.py  mute.py  pin.py  promote.py  purge.py  quote_sticker.py  report.py  rules.py  shop.py  start.py  stats.py  tagall.py  tban.py  truth_dare.py  warn.py  welcome.py
bot/utils/: members.py
