[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "deep-translator>=1.11.4",
    "google-generativeai==0.8.3",
    "groq>=1.4.0",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "python-telegram-bot==21.11.1",
]
